[WHD-25] ensure space exists when aligning Hero contents to top/bottom

--- a/html/themes/whd2021/templates/components/hero-section/paragraph--hero-section.css
+++ b/html/themes/whd2021/templates/components/hero-section/paragraph--hero-section.css
@@ -22,9 +22,11 @@
 
 .hero-section--justify-content--flex-start {
   justify-content: flex-start;
+  padding-top: 1rem;
 }
 .hero-section--justify-content--flex-end {
   justify-content: flex-end;
+  padding-bottom: 1rem;
 }
 .hero-section--justify-content--center {
   justify-content: center;
